Correcting Spacing between Top Label and Text

--- a/module2-solution/css/responsive.css
+++ b/module2-solution/css/responsive.css
@@ -27,6 +27,7 @@ p.content {
 	border: 0px solid black;
 	height: 150px;
 	font-family: Helvetica;
+	margin-top: 0px;
 	overflow:scroll; 
 	color: white;
 }
@@ -34,6 +35,7 @@ p.content {
 p.top-right {
 	text-align: right;
 	font-family: Helvetica;
+	margin-bottom: 0px;
 }
 
 div.box {
